@@ -19,7 +19,6 @@
 
 /* ways to deal with getting/setting termios structure */
 
-#ifdef HAVE_TERMIOS_H
 /* termios interface */
 # ifdef TCSANOW			/* POSIX */
 #  define GET_TERMIOS(fd,tios)	tcgetattr (fd, tios)
@@ -41,17 +40,6 @@
 #  endif
 # endif
 # define SET_TTYMODE(fd,tios)		SET_TERMIOS (fd, tios)
-#else
-/* sgtty interface */
-
-# define SET_TTYMODE(fd,tt)				\
-        tt->sg.sg_ispeed = tt->sg.sg_ospeed = BAUDRATE,	\
-        ioctl (fd, TIOCSETP, & (tt->sg)),		\
-        ioctl (fd, TIOCSETC, & (tt->tc)),		\
-        ioctl (fd, TIOCSLTC, & (tt->lc)),		\
-        ioctl (fd, TIOCSETD, & (tt->line)),		\
-        ioctl (fd, TIOCLSET, & (tt->local))
-#endif				/* HAVE_TERMIOS_H */
 
 /* use the fastest baud-rate */
 #ifdef B38400
